fix overflow on list-item-name and colour on clear

--- a/packages/compass-connect/styles/sidebar.less
+++ b/packages/compass-connect/styles/sidebar.less
@@ -56,7 +56,8 @@
       &-clear {
         text-transform: uppercase;
         visibility: hidden;
-        color: @linkOnDark;
+        text-decoration: underline;
+        color: #fff;
         margin-right: 10px;
         font-weight: 600;
         font-size: 12px;
@@ -101,6 +102,7 @@
       }
 
       &-name {
+        max-width: 150px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
